Created this file for mock site

--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
   <head>
         <title>Patrick with a Hammer</title>
         <link rel="icon" href="img/patrickhammer.jpg">
+        <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto&display=swap" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="css/hero.css">
   </head>
   <body>
       <!-- header element -->
       <header>
           <img src="img/patrickhammer.jpg">
-          <h1>PatrickHammer</h1>
+          <h1>Patrick Star</h1>
       </header>
       <!-- main element -->
     <main>
@@ -27,8 +29,8 @@
                 <li>He enjoys long walks on the beach.</li>
           </ol>
           <h2>Patrick's Friends</h2>
-          <p>Patrick has some great friends. Click on the links bleow to read
-          more bout them:</p>
+          <p>Patrick has some great friends. Click on the links below to read
+          more about them:</p>
           <ul>
               <li><a target="_blank" href="https://spongebob.fandom.com/wiki/Sandy_Cheeks">
               Sandy Cheeks</a></li>
