--- a/test_nib.html
+++ b/test_nib.html
@@ -9,7 +9,7 @@
   <a href="https://google.com" target="_blank" title="Let's go to Google"
   >Click me! I'm a link!</a>
   <p> My name is: <br>
-  Kitty Cat </p>
-  <img src ="img/cat.jpg" >
+  Nibbio! </p>
+  <img src ="img_nib/Nibbio_eclipse.jpg" >
 </body>
 </html>
